final/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> program
Rule 2     program -> imports classes
Rule 3     program -> classes
Rule 4     imports -> imports IMPORT ID SEMICOLON
Rule 5     imports -> IMPORT ID SEMICOLON
Rule 6     classes -> classes class SEMICOLON
Rule 7     classes -> class SEMICOLON
Rule 8     class -> class_header class_body
Rule 9     class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE
Rule 10    class_header -> CLASS CLASS_TYPE
Rule 11    class_body -> LBRACE RBRACE
Rule 12    class_body -> LBRACE features_list RBRACE
Rule 13    features_list -> features_list feature SEMICOLON
Rule 14    features_list -> feature SEMICOLON
Rule 15    feature -> feature_header feature_body
Rule 16    feature_header -> DEF modifier ID COLON type
Rule 17    feature_header -> DEF ID COLON type
Rule 18    feature_body -> LPAREN formal_parameter_list RPAREN LBRACE expression RBRACE
Rule 19    feature_body -> LPAREN RPAREN LBRACE expression RBRACE
Rule 20    feature -> modifier formal
Rule 21    feature -> formal
Rule 22    modifier -> PUBLIC
Rule 23    modifier -> PRIVATE
Rule 24    type -> CLASS_TYPE
Rule 25    type -> INTEGER_TYPE
Rule 26    type -> BOOL_TYPE
Rule 27    type -> STRING_TYPE
Rule 28    type -> OBJECT
Rule 29    type -> SELF_TYPE
Rule 30    formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 31    formal_parameter_list -> formal_parameter
Rule 32    formal_parameter -> ID COLON type
Rule 33    formal_parameter -> ID LSQRBRACKET RSQRBRACKET COLON type
Rule 34    formal -> ID COLON type GETS expression
Rule 35    formal -> ID COLON type
Rule 36    formal -> ID COLON type LSQRBRACKET expression RSQRBRACKET
Rule 37    expression -> block_expression
Rule 38    block_expression -> LBRACE block_list RBRACE
Rule 39    block_list -> block_list expression SEMICOLON
Rule 40    block_list -> expression SEMICOLON
Rule 41    expression -> variable GETS expression
Rule 42    expression -> ID LSQRBRACKET expression RSQRBRACKET GETS expression
Rule 43    expression -> ID LPAREN argument_list RPAREN
Rule 44    expression -> ID LPAREN RPAREN
Rule 45    argument_list -> expression
Rule 46    argument_list -> argument_list COMMA expression
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> expression TIMES expression
Rule 50    expression -> expression DIVIDE expression
Rule 51    expression -> expression MOD expression
Rule 52    expression -> expression LT expression
Rule 53    expression -> expression GT expression
Rule 54    expression -> expression LTEQ expression
Rule 55    expression -> expression GTEQ expression
Rule 56    expression -> expression EQUAL expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> NOT expression
Rule 60    expression -> TILDA expression
Rule 61    expression -> LPAREN expression RPAREN
Rule 62    expression -> SELF
Rule 63    expression -> variable
Rule 64    expression -> ID LSQRBRACKET expression RSQRBRACKET
Rule 65    expression -> INTEGER
Rule 66    expression -> STRING
Rule 67    expression -> TRUE
Rule 68    expression -> FALSE
Rule 69    expression -> BREAK
Rule 70    expression -> CONTINUE
Rule 71    expression -> RETURN expression SEMICOLON
Rule 72    expression -> expression PERIOD ID LPAREN argument_list RPAREN
Rule 73    expression -> expression PERIOD ID LPAREN RPAREN
Rule 74    expression -> NEW type
Rule 75    expression -> ISVOID expression
Rule 76    expression -> let_expression
Rule 77    let -> LET
Rule 78    let_expression -> let formaldehyde IN expression TEL
Rule 79    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN argument_list RPAREN
Rule 80    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN RPAREN
Rule 81    expression -> if_then_else
Rule 82    if_then_else -> IF expression THEN expression ELSE expression FI
Rule 83    expression -> while
Rule 84    while -> WHILE expression LOOP expression POOL
Rule 85    expression -> for
Rule 86    for -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN LOOP expression POOL
Rule 87    formaldehyde -> formaldehyde COMMA ID COLON type GETS expression
Rule 88    formaldehyde -> formaldehyde COMMA ID COLON type
Rule 89    formaldehyde -> formaldehyde COMMA ID COLON type LSQRBRACKET expression RSQRBRACKET
Rule 90    formaldehyde -> ID COLON type GETS expression
Rule 91    formaldehyde -> ID COLON type
Rule 92    formaldehyde -> ID COLON type LSQRBRACKET expression RSQRBRACKET
Rule 93    variable -> ID
Rule 94    variable -> variable PERIOD ID

Terminals, with rules where they appear

AND                  : 58
AT                   : 79 80
BOOL_TYPE            : 26
BREAK                : 69
CLASS                : 9 10
CLASS_TYPE           : 9 9 10 24 79 80
COLON                : 16 17 32 33 34 35 36 87 88 89 90 91 92
COMMA                : 30 46 87 88 89
CONTINUE             : 70
DEF                  : 16 17
DIVIDE               : 50
ELSE                 : 82
EQUAL                : 56
FALSE                : 68
FI                   : 82
FOR                  : 86
GETS                 : 34 41 42 87 90
GT                   : 53
GTEQ                 : 55
ID                   : 4 5 16 17 32 33 34 35 36 42 43 44 64 72 73 79 80 87 88 89 90 91 92 93 94
IF                   : 82
IMPORT               : 4 5
IN                   : 78
INHERITS             : 9
INTEGER              : 65
INTEGER_TYPE         : 25
ISVOID               : 75
LBRACE               : 11 12 18 19 38
LET                  : 77
LOOP                 : 84 86
LPAREN               : 18 19 43 44 61 72 73 79 80 86
LSQRBRACKET          : 33 36 42 64 89 92
LT                   : 52
LTEQ                 : 54
MINUS                : 48
MOD                  : 51
NEW                  : 74
NOT                  : 59
OBJECT               : 28
OR                   : 57
PERIOD               : 72 73 79 80 94
PLUS                 : 47
POOL                 : 84 86
PRIVATE              : 23
PUBLIC               : 22
RBRACE               : 11 12 18 19 38
RETURN               : 71
RPAREN               : 18 19 43 44 61 72 73 79 80 86
RSQRBRACKET          : 33 36 42 64 89 92
SELF                 : 62
SELF_TYPE            : 29
SEMICOLON            : 4 5 6 7 13 14 39 40 71 86 86
STRING               : 66
STRING_TYPE          : 27
TEL                  : 78
THEN                 : 82
TILDA                : 60
TIMES                : 49
TRUE                 : 67
WHILE                : 84
error                : 

Nonterminals, with rules where they appear

argument_list        : 43 46 72 79
block_expression     : 37
block_list           : 38 39
class                : 6 7
class_body           : 8
class_header         : 8
classes              : 2 3 6
expression           : 18 19 34 36 39 40 41 42 42 45 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 64 71 72 73 75 78 79 80 82 82 82 84 84 86 86 86 86 87 89 90 92
feature              : 13 14
feature_body         : 15
feature_header       : 15
features_list        : 12 13
for                  : 85
formal               : 20 21
formal_parameter     : 30 31
formal_parameter_list : 18 30
formaldehyde         : 78 87 88 89
if_then_else         : 81
imports              : 2 4
let                  : 78
let_expression       : 76
modifier             : 16 20
program              : 1
start                : 0
type                 : 16 17 32 33 34 35 36 74 87 88 89 90 91 92
variable             : 41 63 94
while                : 83

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program
    (2) program -> . imports classes
    (3) program -> . classes
    (4) imports -> . imports IMPORT ID SEMICOLON
    (5) imports -> . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    IMPORT          shift and go to state 7
    CLASS           shift and go to state 5

    program                        shift and go to state 1
    imports                        shift and go to state 2
    start                          shift and go to state 4
    classes                        shift and go to state 6
    class_header                   shift and go to state 8
    class                          shift and go to state 3

state 1

    (1) start -> program .

    $end            reduce using rule 1 (start -> program .)


state 2

    (2) program -> imports . classes
    (4) imports -> imports . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    IMPORT          shift and go to state 10
    CLASS           shift and go to state 5

    classes                        shift and go to state 9
    class_header                   shift and go to state 8
    class                          shift and go to state 3

state 3

    (7) classes -> class . SEMICOLON

    SEMICOLON       shift and go to state 11


state 4

    (0) S' -> start .



state 5

    (9) class_header -> CLASS . CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> CLASS . CLASS_TYPE

    CLASS_TYPE      shift and go to state 12


state 6

    (3) program -> classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    $end            reduce using rule 3 (program -> classes .)
    CLASS           shift and go to state 5

    class_header                   shift and go to state 8
    class                          shift and go to state 13

state 7

    (5) imports -> IMPORT . ID SEMICOLON

    ID              shift and go to state 14


state 8

    (8) class -> class_header . class_body
    (11) class_body -> . LBRACE RBRACE
    (12) class_body -> . LBRACE features_list RBRACE

    LBRACE          shift and go to state 15

    class_body                     shift and go to state 16

state 9

    (2) program -> imports classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . class_header class_body
    (9) class_header -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE
    (10) class_header -> . CLASS CLASS_TYPE

    $end            reduce using rule 2 (program -> imports classes .)
    CLASS           shift and go to state 5

    class_header                   shift and go to state 8
    class                          shift and go to state 13

state 10

    (4) imports -> imports IMPORT . ID SEMICOLON

    ID              shift and go to state 17


state 11

    (7) classes -> class SEMICOLON .

    CLASS           reduce using rule 7 (classes -> class SEMICOLON .)
    $end            reduce using rule 7 (classes -> class SEMICOLON .)


state 12

    (9) class_header -> CLASS CLASS_TYPE . INHERITS CLASS_TYPE
    (10) class_header -> CLASS CLASS_TYPE .

    INHERITS        shift and go to state 18
    LBRACE          reduce using rule 10 (class_header -> CLASS CLASS_TYPE .)


state 13

    (6) classes -> classes class . SEMICOLON

    SEMICOLON       shift and go to state 19


state 14

    (5) imports -> IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 20


state 15

    (11) class_body -> LBRACE . RBRACE
    (12) class_body -> LBRACE . features_list RBRACE
    (13) features_list -> . features_list feature SEMICOLON
    (14) features_list -> . feature SEMICOLON
    (15) feature -> . feature_header feature_body
    (20) feature -> . modifier formal
    (21) feature -> . formal
    (16) feature_header -> . DEF modifier ID COLON type
    (17) feature_header -> . DEF ID COLON type
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (34) formal -> . ID COLON type GETS expression
    (35) formal -> . ID COLON type
    (36) formal -> . ID COLON type LSQRBRACKET expression RSQRBRACKET

    RBRACE          shift and go to state 21
    DEF             shift and go to state 29
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 23
    ID              shift and go to state 28

    features_list                  shift and go to state 24
    feature                        shift and go to state 22
    feature_header                 shift and go to state 26
    modifier                       shift and go to state 27
    formal                         shift and go to state 30

state 16

    (8) class -> class_header class_body .

    SEMICOLON       reduce using rule 8 (class -> class_header class_body .)


state 17

    (4) imports -> imports IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 31


state 18

    (9) class_header -> CLASS CLASS_TYPE INHERITS . CLASS_TYPE

    CLASS_TYPE      shift and go to state 32


state 19

    (6) classes -> classes class SEMICOLON .

    CLASS           reduce using rule 6 (classes -> classes class SEMICOLON .)
    $end            reduce using rule 6 (classes -> classes class SEMICOLON .)


state 20

    (5) imports -> IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)


state 21

    (11) class_body -> LBRACE RBRACE .

    SEMICOLON       reduce using rule 11 (class_body -> LBRACE RBRACE .)


state 22

    (14) features_list -> feature . SEMICOLON

    SEMICOLON       shift and go to state 33


state 23

    (23) modifier -> PRIVATE .

    ID              reduce using rule 23 (modifier -> PRIVATE .)


state 24

    (12) class_body -> LBRACE features_list . RBRACE
    (13) features_list -> features_list . feature SEMICOLON
    (15) feature -> . feature_header feature_body
    (20) feature -> . modifier formal
    (21) feature -> . formal
    (16) feature_header -> . DEF modifier ID COLON type
    (17) feature_header -> . DEF ID COLON type
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (34) formal -> . ID COLON type GETS expression
    (35) formal -> . ID COLON type
    (36) formal -> . ID COLON type LSQRBRACKET expression RSQRBRACKET

    RBRACE          shift and go to state 34
    DEF             shift and go to state 29
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 23
    ID              shift and go to state 28

    feature                        shift and go to state 35
    feature_header                 shift and go to state 26
    modifier                       shift and go to state 27
    formal                         shift and go to state 30

state 25

    (22) modifier -> PUBLIC .

    ID              reduce using rule 22 (modifier -> PUBLIC .)


state 26

    (15) feature -> feature_header . feature_body
    (18) feature_body -> . LPAREN formal_parameter_list RPAREN LBRACE expression RBRACE
    (19) feature_body -> . LPAREN RPAREN LBRACE expression RBRACE

    LPAREN          shift and go to state 37

    feature_body                   shift and go to state 36

state 27

    (20) feature -> modifier . formal
    (34) formal -> . ID COLON type GETS expression
    (35) formal -> . ID COLON type
    (36) formal -> . ID COLON type LSQRBRACKET expression RSQRBRACKET

    ID              shift and go to state 28

    formal                         shift and go to state 38

state 28

    (34) formal -> ID . COLON type GETS expression
    (35) formal -> ID . COLON type
    (36) formal -> ID . COLON type LSQRBRACKET expression RSQRBRACKET

    COLON           shift and go to state 39


state 29

    (16) feature_header -> DEF . modifier ID COLON type
    (17) feature_header -> DEF . ID COLON type
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE

    ID              shift and go to state 41
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 23

    modifier                       shift and go to state 40

state 30

    (21) feature -> formal .

    SEMICOLON       reduce using rule 21 (feature -> formal .)


state 31

    (4) imports -> imports IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)


state 32

    (9) class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE .

    LBRACE          reduce using rule 9 (class_header -> CLASS CLASS_TYPE INHERITS CLASS_TYPE .)


state 33

    (14) features_list -> feature SEMICOLON .

    RBRACE          reduce using rule 14 (features_list -> feature SEMICOLON .)
    DEF             reduce using rule 14 (features_list -> feature SEMICOLON .)
    PUBLIC          reduce using rule 14 (features_list -> feature SEMICOLON .)
    PRIVATE         reduce using rule 14 (features_list -> feature SEMICOLON .)
    ID              reduce using rule 14 (features_list -> feature SEMICOLON .)


state 34

    (12) class_body -> LBRACE features_list RBRACE .

    SEMICOLON       reduce using rule 12 (class_body -> LBRACE features_list RBRACE .)


state 35

    (13) features_list -> features_list feature . SEMICOLON

    SEMICOLON       shift and go to state 42


state 36

    (15) feature -> feature_header feature_body .

    SEMICOLON       reduce using rule 15 (feature -> feature_header feature_body .)


state 37

    (18) feature_body -> LPAREN . formal_parameter_list RPAREN LBRACE expression RBRACE
    (19) feature_body -> LPAREN . RPAREN LBRACE expression RBRACE
    (30) formal_parameter_list -> . formal_parameter_list COMMA formal_parameter
    (31) formal_parameter_list -> . formal_parameter
    (32) formal_parameter -> . ID COLON type
    (33) formal_parameter -> . ID LSQRBRACKET RSQRBRACKET COLON type

    RPAREN          shift and go to state 44
    ID              shift and go to state 46

    formal_parameter_list          shift and go to state 43
    formal_parameter               shift and go to state 45

state 38

    (20) feature -> modifier formal .

    SEMICOLON       reduce using rule 20 (feature -> modifier formal .)


state 39

    (34) formal -> ID COLON . type GETS expression
    (35) formal -> ID COLON . type
    (36) formal -> ID COLON . type LSQRBRACKET expression RSQRBRACKET
    (24) type -> . CLASS_TYPE
    (25) type -> . INTEGER_TYPE
    (26) type -> . BOOL_TYPE
    (27) type -> . STRING_TYPE
    (28) type -> . OBJECT
    (29) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 48
    INTEGER_TYPE    shift and go to state 51
    BOOL_TYPE       shift and go to state 53
    STRING_TYPE     shift and go to state 50
    OBJECT          shift and go to state 49
    SELF_TYPE       shift and go to state 47

    type                           shift and go to state 52

state 40

    (16) feature_header -> DEF modifier . ID COLON type

    ID              shift and go to state 54


state 41

    (17) feature_header -> DEF ID . COLON type

    COLON           shift and go to state 55


state 42

    (13) features_list -> features_list feature SEMICOLON .

    RBRACE          reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    DEF             reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    PUBLIC          reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    PRIVATE         reduce using rule 13 (features_list -> features_list feature SEMICOLON .)
    ID              reduce using rule 13 (features_list -> features_list feature SEMICOLON .)


state 43

    (18) feature_body -> LPAREN formal_parameter_list . RPAREN LBRACE expression RBRACE
    (30) formal_parameter_list -> formal_parameter_list . COMMA formal_parameter

    RPAREN          shift and go to state 56
    COMMA           shift and go to state 57


state 44

    (19) feature_body -> LPAREN RPAREN . LBRACE expression RBRACE

    LBRACE          shift and go to state 58


state 45

    (31) formal_parameter_list -> formal_parameter .

    RPAREN          reduce using rule 31 (formal_parameter_list -> formal_parameter .)
    COMMA           reduce using rule 31 (formal_parameter_list -> formal_parameter .)


state 46

    (32) formal_parameter -> ID . COLON type
    (33) formal_parameter -> ID . LSQRBRACKET RSQRBRACKET COLON type

    COLON           shift and go to state 59
    LSQRBRACKET     shift and go to state 60


state 47

    (29) type -> SELF_TYPE .

    GETS            reduce using rule 29 (type -> SELF_TYPE .)
    LSQRBRACKET     reduce using rule 29 (type -> SELF_TYPE .)
    IN              reduce using rule 29 (type -> SELF_TYPE .)
    COMMA           reduce using rule 29 (type -> SELF_TYPE .)
    RBRACE          reduce using rule 29 (type -> SELF_TYPE .)
    PLUS            reduce using rule 29 (type -> SELF_TYPE .)
    MINUS           reduce using rule 29 (type -> SELF_TYPE .)
    TIMES           reduce using rule 29 (type -> SELF_TYPE .)
    DIVIDE          reduce using rule 29 (type -> SELF_TYPE .)
    MOD             reduce using rule 29 (type -> SELF_TYPE .)
    LT              reduce using rule 29 (type -> SELF_TYPE .)
    GT              reduce using rule 29 (type -> SELF_TYPE .)
    LTEQ            reduce using rule 29 (type -> SELF_TYPE .)
    GTEQ            reduce using rule 29 (type -> SELF_TYPE .)
    EQUAL           reduce using rule 29 (type -> SELF_TYPE .)
    OR              reduce using rule 29 (type -> SELF_TYPE .)
    AND             reduce using rule 29 (type -> SELF_TYPE .)
    PERIOD          reduce using rule 29 (type -> SELF_TYPE .)
    AT              reduce using rule 29 (type -> SELF_TYPE .)
    SEMICOLON       reduce using rule 29 (type -> SELF_TYPE .)
    RSQRBRACKET     reduce using rule 29 (type -> SELF_TYPE .)
    LOOP            reduce using rule 29 (type -> SELF_TYPE .)
    THEN            reduce using rule 29 (type -> SELF_TYPE .)
    RPAREN          reduce using rule 29 (type -> SELF_TYPE .)
    POOL            reduce using rule 29 (type -> SELF_TYPE .)
    ELSE            reduce using rule 29 (type -> SELF_TYPE .)
    TEL             reduce using rule 29 (type -> SELF_TYPE .)
    FI              reduce using rule 29 (type -> SELF_TYPE .)
    LPAREN          reduce using rule 29 (type -> SELF_TYPE .)


state 48

    (24) type -> CLASS_TYPE .

    GETS            reduce using rule 24 (type -> CLASS_TYPE .)
    LSQRBRACKET     reduce using rule 24 (type -> CLASS_TYPE .)
    IN              reduce using rule 24 (type -> CLASS_TYPE .)
    COMMA           reduce using rule 24 (type -> CLASS_TYPE .)
    RBRACE          reduce using rule 24 (type -> CLASS_TYPE .)
    PLUS            reduce using rule 24 (type -> CLASS_TYPE .)
    MINUS           reduce using rule 24 (type -> CLASS_TYPE .)
    TIMES           reduce using rule 24 (type -> CLASS_TYPE .)
    DIVIDE          reduce using rule 24 (type -> CLASS_TYPE .)
    MOD             reduce using rule 24 (type -> CLASS_TYPE .)
    LT              reduce using rule 24 (type -> CLASS_TYPE .)
    GT              reduce using rule 24 (type -> CLASS_TYPE .)
    LTEQ            reduce using rule 24 (type -> CLASS_TYPE .)
    GTEQ            reduce using rule 24 (type -> CLASS_TYPE .)
    EQUAL           reduce using rule 24 (type -> CLASS_TYPE .)
    OR              reduce using rule 24 (type -> CLASS_TYPE .)
    AND             reduce using rule 24 (type -> CLASS_TYPE .)
    PERIOD          reduce using rule 24 (type -> CLASS_TYPE .)
    AT              reduce using rule 24 (type -> CLASS_TYPE .)
    SEMICOLON       reduce using rule 24 (type -> CLASS_TYPE .)
    RSQRBRACKET     reduce using rule 24 (type -> CLASS_TYPE .)
    LOOP            reduce using rule 24 (type -> CLASS_TYPE .)
    THEN            reduce using rule 24 (type -> CLASS_TYPE .)
    RPAREN          reduce using rule 24 (type -> CLASS_TYPE .)
    POOL            reduce using rule 24 (type -> CLASS_TYPE .)
    ELSE            reduce using rule 24 (type -> CLASS_TYPE .)
    TEL             reduce using rule 24 (type -> CLASS_TYPE .)
    FI              reduce using rule 24 (type -> CLASS_TYPE .)
    LPAREN          reduce using rule 24 (type -> CLASS_TYPE .)


state 49

    (28) type -> OBJECT .

    GETS            reduce using rule 28 (type -> OBJECT .)
    LSQRBRACKET     reduce using rule 28 (type -> OBJECT .)
    IN              reduce using rule 28 (type -> OBJECT .)
    COMMA           reduce using rule 28 (type -> OBJECT .)
    RBRACE          reduce using rule 28 (type -> OBJECT .)
    PLUS            reduce using rule 28 (type -> OBJECT .)
    MINUS           reduce using rule 28 (type -> OBJECT .)
    TIMES           reduce using rule 28 (type -> OBJECT .)
    DIVIDE          reduce using rule 28 (type -> OBJECT .)
    MOD             reduce using rule 28 (type -> OBJECT .)
    LT              reduce using rule 28 (type -> OBJECT .)
    GT              reduce using rule 28 (type -> OBJECT .)
    LTEQ            reduce using rule 28 (type -> OBJECT .)
    GTEQ            reduce using rule 28 (type -> OBJECT .)
    EQUAL           reduce using rule 28 (type -> OBJECT .)
    OR              reduce using rule 28 (type -> OBJECT .)
    AND             reduce using rule 28 (type -> OBJECT .)
    PERIOD          reduce using rule 28 (type -> OBJECT .)
    AT              reduce using rule 28 (type -> OBJECT .)
    SEMICOLON       reduce using rule 28 (type -> OBJECT .)
    RSQRBRACKET     reduce using rule 28 (type -> OBJECT .)
    LOOP            reduce using rule 28 (type -> OBJECT .)
    THEN            reduce using rule 28 (type -> OBJECT .)
    RPAREN          reduce using rule 28 (type -> OBJECT .)
    POOL            reduce using rule 28 (type -> OBJECT .)
    ELSE            reduce using rule 28 (type -> OBJECT .)
    TEL             reduce using rule 28 (type -> OBJECT .)
    FI              reduce using rule 28 (type -> OBJECT .)
    LPAREN          reduce using rule 28 (type -> OBJECT .)


state 50

    (27) type -> STRING_TYPE .

    GETS            reduce using rule 27 (type -> STRING_TYPE .)
    LSQRBRACKET     reduce using rule 27 (type -> STRING_TYPE .)
    IN              reduce using rule 27 (type -> STRING_TYPE .)
    COMMA           reduce using rule 27 (type -> STRING_TYPE .)
    RBRACE          reduce using rule 27 (type -> STRING_TYPE .)
    PLUS            reduce using rule 27 (type -> STRING_TYPE .)
    MINUS           reduce using rule 27 (type -> STRING_TYPE .)
    TIMES           reduce using rule 27 (type -> STRING_TYPE .)
    DIVIDE          reduce using rule 27 (type -> STRING_TYPE .)
    MOD             reduce using rule 27 (type -> STRING_TYPE .)
    LT              reduce using rule 27 (type -> STRING_TYPE .)
    GT              reduce using rule 27 (type -> STRING_TYPE .)
    LTEQ            reduce using rule 27 (type -> STRING_TYPE .)
    GTEQ            reduce using rule 27 (type -> STRING_TYPE .)
    EQUAL           reduce using rule 27 (type -> STRING_TYPE .)
    OR              reduce using rule 27 (type -> STRING_TYPE .)
    AND             reduce using rule 27 (type -> STRING_TYPE .)
    PERIOD          reduce using rule 27 (type -> STRING_TYPE .)
    AT              reduce using rule 27 (type -> STRING_TYPE .)
    SEMICOLON       reduce using rule 27 (type -> STRING_TYPE .)
    RSQRBRACKET     reduce using rule 27 (type -> STRING_TYPE .)
    LOOP            reduce using rule 27 (type -> STRING_TYPE .)
    THEN            reduce using rule 27 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 27 (type -> STRING_TYPE .)
    POOL            reduce using rule 27 (type -> STRING_TYPE .)
    ELSE            reduce using rule 27 (type -> STRING_TYPE .)
    TEL             reduce using rule 27 (type -> STRING_TYPE .)
    FI              reduce using rule 27 (type -> STRING_TYPE .)
    LPAREN          reduce using rule 27 (type -> STRING_TYPE .)


state 51

    (25) type -> INTEGER_TYPE .

    GETS            reduce using rule 25 (type -> INTEGER_TYPE .)
    LSQRBRACKET     reduce using rule 25 (type -> INTEGER_TYPE .)
    IN              reduce using rule 25 (type -> INTEGER_TYPE .)
    COMMA           reduce using rule 25 (type -> INTEGER_TYPE .)
    RBRACE          reduce using rule 25 (type -> INTEGER_TYPE .)
    PLUS            reduce using rule 25 (type -> INTEGER_TYPE .)
    MINUS           reduce using rule 25 (type -> INTEGER_TYPE .)
    TIMES           reduce using rule 25 (type -> INTEGER_TYPE .)
    DIVIDE          reduce using rule 25 (type -> INTEGER_TYPE .)
    MOD             reduce using rule 25 (type -> INTEGER_TYPE .)
    LT              reduce using rule 25 (type -> INTEGER_TYPE .)
    GT              reduce using rule 25 (type -> INTEGER_TYPE .)
    LTEQ            reduce using rule 25 (type -> INTEGER_TYPE .)
    GTEQ            reduce using rule 25 (type -> INTEGER_TYPE .)
    EQUAL           reduce using rule 25 (type -> INTEGER_TYPE .)
    OR              reduce using rule 25 (type -> INTEGER_TYPE .)
    AND             reduce using rule 25 (type -> INTEGER_TYPE .)
    PERIOD          reduce using rule 25 (type -> INTEGER_TYPE .)
    AT              reduce using rule 25 (type -> INTEGER_TYPE .)
    SEMICOLON       reduce using rule 25 (type -> INTEGER_TYPE .)
    RSQRBRACKET     reduce using rule 25 (type -> INTEGER_TYPE .)
    LOOP            reduce using rule 25 (type -> INTEGER_TYPE .)
    THEN            reduce using rule 25 (type -> INTEGER_TYPE .)
    RPAREN          reduce using rule 25 (type -> INTEGER_TYPE .)
    POOL            reduce using rule 25 (type -> INTEGER_TYPE .)
    ELSE            reduce using rule 25 (type -> INTEGER_TYPE .)
    TEL             reduce using rule 25 (type -> INTEGER_TYPE .)
    FI              reduce using rule 25 (type -> INTEGER_TYPE .)
    LPAREN          reduce using rule 25 (type -> INTEGER_TYPE .)


state 52

    (34) formal -> ID COLON type . GETS expression
    (35) formal -> ID COLON type .
    (36) formal -> ID COLON type . LSQRBRACKET expression RSQRBRACKET

    GETS            shift and go to state 61
    SEMICOLON       reduce using rule 35 (formal -> ID COLON type .)
    LSQRBRACKET     shift and go to state 62


state 53

    (26) type -> BOOL_TYPE .

    GETS            reduce using rule 26 (type -> BOOL_TYPE .)
    LSQRBRACKET     reduce using rule 26 (type -> BOOL_TYPE .)
    IN              reduce using rule 26 (type -> BOOL_TYPE .)
    COMMA           reduce using rule 26 (type -> BOOL_TYPE .)
    RBRACE          reduce using rule 26 (type -> BOOL_TYPE .)
    PLUS            reduce using rule 26 (type -> BOOL_TYPE .)
    MINUS           reduce using rule 26 (type -> BOOL_TYPE .)
    TIMES           reduce using rule 26 (type -> BOOL_TYPE .)
    DIVIDE          reduce using rule 26 (type -> BOOL_TYPE .)
    MOD             reduce using rule 26 (type -> BOOL_TYPE .)
    LT              reduce using rule 26 (type -> BOOL_TYPE .)
    GT              reduce using rule 26 (type -> BOOL_TYPE .)
    LTEQ            reduce using rule 26 (type -> BOOL_TYPE .)
    GTEQ            reduce using rule 26 (type -> BOOL_TYPE .)
    EQUAL           reduce using rule 26 (type -> BOOL_TYPE .)
    OR              reduce using rule 26 (type -> BOOL_TYPE .)
    AND             reduce using rule 26 (type -> BOOL_TYPE .)
    PERIOD          reduce using rule 26 (type -> BOOL_TYPE .)
    AT              reduce using rule 26 (type -> BOOL_TYPE .)
    SEMICOLON       reduce using rule 26 (type -> BOOL_TYPE .)
    RSQRBRACKET     reduce using rule 26 (type -> BOOL_TYPE .)
    LOOP            reduce using rule 26 (type -> BOOL_TYPE .)
    THEN            reduce using rule 26 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 26 (type -> BOOL_TYPE .)
    POOL            reduce using rule 26 (type -> BOOL_TYPE .)
    ELSE            reduce using rule 26 (type -> BOOL_TYPE .)
    TEL             reduce using rule 26 (type -> BOOL_TYPE .)
    FI              reduce using rule 26 (type -> BOOL_TYPE .)
    LPAREN          reduce using rule 26 (type -> BOOL_TYPE .)


state 54

    (16) feature_header -> DEF modifier ID . COLON type

    COLON           shift and go to state 63


state 55

    (17) feature_header -> DEF ID COLON . type
    (24) type -> . CLASS_TYPE
    (25) type -> . INTEGER_TYPE
    (26) type -> . BOOL_TYPE
    (27) type -> . STRING_TYPE
    (28) type -> . OBJECT
    (29) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 48
    INTEGER_TYPE    shift and go to state 51
    BOOL_TYPE       shift and go to state 53
    STRING_TYPE     shift and go to state 50
    OBJECT          shift and go to state 49
    SELF_TYPE       shift and go to state 47

    type                           shift and go to state 64

state 56

    (18) feature_body -> LPAREN formal_parameter_list RPAREN . LBRACE expression RBRACE

    LBRACE          shift and go to state 65


state 57

    (30) formal_parameter_list -> formal_parameter_list COMMA . formal_parameter
    (32) formal_parameter -> . ID COLON type
    (33) formal_parameter -> . ID LSQRBRACKET RSQRBRACKET COLON type

    ID              shift and go to state 46

    formal_parameter               shift and go to state 66

state 58
